Changes in Slurm-GCP 5.0.0
==========================
 -- Added shielded VM support
 -- suspend.py - now handles "Quota exceeded" error
 -- Changed Terraform minimum version to 1.0
 -- Replaced `foundry/` with `packer/`
 -- Terraform modules now use Google Cloudfoundry Toolkit
 -- Added auto_create_subnetworks option
 -- ansible - scripts role for custom provisioning scripts
 -- Replaced `tf/` with `terraform/`
 -- Added destroy_nodes - script to destroy cluster compute nodes
 -- Added clustersync - script to propagate changes to running cluster
 -- Added data migration workflow example jobs and configuration

Changes in Slurm-GCP 4.1.0
==========================
 -- suspend.py - now handles "Quota exceeded" error
 -- Support for Intel-select options
 -- slurmrestd - changed user from root to user slurmrestd
 -- resume.py - fix state=down reason being malformed
 -- suspend.py - scontrol update now specifies new state=power_down_force
 -- slurm.conf - update to AccountingStoreFlags=job_comment
 -- slurmsync.py - state flags use new POWERED_DOWN state
 -- Updated Slurm to version 21.08.2

Changes in Slurm-GCP 4.0.4
==========================
 -- Configure sockets, cores, threads on compute nodes for better performace
    with cons_tres.

Changes in Slurm-GCP 4.0.3
==========================
 -- Introduce NEWS file
 -- Recommended image is now
    schedmd-slurm-public/hpc-centos-7-schedmd-slurm-20-11-7
 -- Changed slurmrestd port to 6842 (from 80)
 -- partitions[].image_hyperthreads=false now actively disables hyperthreads
    on hpc-centos-7 images, starting with the now recommended image
 -- partitions[].image_hyperthreads is now true in tfvars examples
 -- Fixed running of custom-compute-install on login node
 -- Fixed slurmrestd install on foundry debian images
 -- Disable SELinux (was permissive) to fix hpc-centos-7 reboot issue
 -- Updated Slurm to 20.11.07