@@ -28,6 +28,15 @@ variable "cluster_name" {
   description = "Cluster name, used for resource naming and slurm accounting."
 }
 
+variable "enable_oslogin" {
+  type        = bool
+  description = <<EOD
+Enables Google Cloud os-login for user login and authentication for VMs.
+See https://cloud.google.com/compute/docs/oslogin
+EOD
+  default     = true
+}
+
 #####################
 # CONTROLLER: CLOUD #
 #####################
